Add User=root to systemd unit
* HOME variable have to be defined
* https://www.freedesktop.org/software/systemd/man/latest/systemd.exec.html

--- a/tools/files/systemd.opensvc-agent.service
+++ b/tools/files/systemd.opensvc-agent.service
@@ -19,6 +19,7 @@ Requires=opensvc-services.service
 [Service]
 Type=forking
 TimeoutStopSec=5m
+User=root
 ExecStart=/usr/bin/om daemon start
 ExecStop=/usr/bin/om daemon stop
 KillMode=process
