--- a/docker/Dockerfile.debian12
+++ b/docker/Dockerfile.debian12
@@ -24,10 +24,12 @@ COPY --from=builder /opt/go /opt/go
 
 COPY --from=builder /opt/gopath /opt/gopath
 
-RUN apt-get update && apt-get install --no-install-recommends -y \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -qq --no-install-recommends -y \
     bash-completion \
     build-essential \
     debhelper \
+    debsig-verify \
+    debsigs \
     devscripts \
     dh-exec \
     dh-golang \
