--- a/docker/Dockerfile.u2204
+++ b/docker/Dockerfile.u2204
@@ -24,7 +24,7 @@ COPY --from=builder /opt/go /opt/go
 
 COPY --from=builder /opt/gopath /opt/gopath
 
-RUN apt-get update && apt-get install --no-install-recommends -y \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -qq --no-install-recommends -y \
     bash-completion \
     build-essential \
     debhelper \
