Ensure $HOME is set in this unit

--- a/tools/files/systemd.opensvc-services.service
+++ b/tools/files/systemd.opensvc-services.service
@@ -7,6 +7,6 @@ After=opensvc-server.service
 Type=oneshot
 TimeoutStopSec=1h
 RemainAfterExit=true
+User=root
 ExecStart=/usr/bin/om node version
 ExecStop=/usr/bin/om daemon shutdown
-
