Add dependency with drbd-graceful-shutdown.service
* https://github.com/LINBIT/drbd-utils/commit/7a75610ee73a2d43fe43771444096dc300185a66
* drbd resources managed by opensvc must be stopped before this unit

--- a/tools/files/systemd.opensvc-server.service
+++ b/tools/files/systemd.opensvc-server.service
@@ -10,6 +10,7 @@ After=libvirtd.service
 After=virt-guest-shutdown.target
 After=libvirt-guests.service
 After=blk-availability.service
+After=drbd-graceful-shutdown.service
 Wants=libvirtd.service
 Wants=libvirt-guests.service
 Wants=blk-availability.service
