--- a/docker/Dockerfile.rhel8
+++ b/docker/Dockerfile.rhel8
@@ -2,6 +2,7 @@ FROM alpine:3.17 AS builder
 
 ARG OSVC_GITREPO_URL
 ARG OSVC_GOLANG_URL
+ARG OSVC_CYCLONEDX_VERSION
 
 RUN apk add --no-cache curl git tar go
 
@@ -13,6 +14,11 @@ RUN curl --silent --output go.tar.gz -L $OSVC_GOLANG_URL && \
     tar xzf go.tar.gz && \
     rm -f go.tar.gz && \
     mkdir /opt/gopath
+
+RUN curl -sSfL https://github.com/CycloneDX/cyclonedx-cli/releases/download/$OSVC_CYCLONEDX_VERSION/cyclonedx-linux-x64 -o /opt/cyclonedx && \
+    chmod 755 /opt/cyclonedx
+
+RUN curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /opt/syft
 
 RUN cd /opt/opensvc && GOPATH=/opt/gopath /opt/go/bin/go get ./cmd/om ./cmd/ox ./util/compobj
 
@@ -26,6 +32,10 @@ COPY --from=builder /opt/opensvc /opt/opensvc
 COPY --from=builder /opt/go /opt/go
 
 COPY --from=builder /opt/gopath /opt/gopath
+
+COPY --from=builder /opt/cyclonedx /usr/bin/cyclonedx
+
+COPY --from=builder /opt/syft/syft /usr/bin/syft
 
 # required for subscription-manager to work in container
 RUN sed -i 's/\(def in_container():\)/\1\n    return False/g' /usr/lib64/python*/*-packages/rhsm/config.py
