--- a/docker/Dockerfile.sles16
+++ b/docker/Dockerfile.sles16
@@ -1,10 +1,10 @@
-FROM alpine:3.22 AS builder
+FROM alpine:3.17 AS builder
 
 ARG OSVC_GITREPO_URL
 ARG OSVC_GOLANG_URL
 ARG OSVC_CYCLONEDX_VERSION
 
-RUN apk add --no-cache curl git tar
+RUN apk add --no-cache curl git tar go
 
 WORKDIR /opt
 
@@ -22,7 +22,7 @@ RUN curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | 
 
 RUN cd /opt/opensvc && GOPATH=/opt/gopath /opt/go/bin/go get ./cmd/om ./cmd/ox ./util/compobj
 
-FROM debian:trixie
+FROM registry.suse.com/suse/sle16
 
 COPY --from=builder /opt/opensvc /opt/opensvc
 
@@ -34,30 +34,13 @@ COPY --from=builder /opt/cyclonedx /usr/bin/cyclonedx
 
 COPY --from=builder /opt/syft/syft /usr/bin/syft
 
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -qq --no-install-recommends -y \
-    bash-completion \
-    build-essential \
-    debhelper \
-    debsig-verify \
-    debsigs \
-    devscripts \
-    dh-exec \
-    dh-golang \
-    gcc \
-    git \
-    golang-any \
-    less \
-    lsb-release \
-    lintian \
-    sudo \
-    vim \
-    && rm -rf /var/lib/apt/lists/*
+RUN zypper --gpg-auto-import-keys refresh && \
+    zypper --gpg-auto-import-keys -n --non-interactive install gcc git rpm-build rpmlint sudo && \
+    zypper clean
 
-RUN /bin/echo -e "export PATH=/opt/go/bin:$PATH\nexport GOPATH=/opt/gopath" >> /etc/profile.d/golang.sh
+RUN echo -e "export PATH=/opt/go/bin:$PATH\nexport GOPATH=/opt/gopath" >> /etc/profile.d/golang.sh
 
-RUN useradd --uid 2020 --create-home --shell /bin/bash builder && chown -Rh builder:builder /home/builder
-
-RUN echo "builder ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+RUN groupadd --gid 2345 builder && useradd --uid 2345 --gid builder --create-home --shell /bin/bash builder
 
 COPY ./docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
