--- a/docker/Dockerfile.debian11
+++ b/docker/Dockerfile.debian11
@@ -1,7 +1,9 @@
 FROM alpine:3.17 AS builder
 
 ARG OSVC_GITREPO_URL
+ARG WEBAPP_GITREPO_URL
 ARG OSVC_GOLANG_URL
+ARG OSVC_CYCLONEDX_VERSION
 
 RUN apk add --no-cache curl git tar
 
@@ -9,10 +11,17 @@ WORKDIR /opt
 
 RUN git clone $OSVC_GITREPO_URL opensvc
 
+RUN git clone $WEBAPP_GITREPO_URL om3-webapp
+
 RUN curl --silent --output go.tar.gz -L $OSVC_GOLANG_URL && \
     tar xzf go.tar.gz && \
     rm -f go.tar.gz && \
     mkdir /opt/gopath
+
+RUN curl -sSfL https://github.com/CycloneDX/cyclonedx-cli/releases/download/$OSVC_CYCLONEDX_VERSION/cyclonedx-linux-x64 -o /opt/cyclonedx && \
+    chmod 755 /opt/cyclonedx
+
+RUN curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /opt/syft
 
 RUN cd /opt/opensvc && GOPATH=/opt/gopath /opt/go/bin/go get ./cmd/om ./cmd/ox ./util/compobj
 
@@ -20,9 +29,15 @@ FROM debian:11
 
 COPY --from=builder /opt/opensvc /opt/opensvc
 
+COPY --from=builder /opt/om3-webapp /opt/om3-webapp
+
 COPY --from=builder /opt/go /opt/go
 
 COPY --from=builder /opt/gopath /opt/gopath
+
+COPY --from=builder /opt/cyclonedx /usr/bin/cyclonedx
+
+COPY --from=builder /opt/syft/syft /usr/bin/syft
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -qq --no-install-recommends -y \
     bash-completion \
