Fix SecretsUsedInArgOrEnv docker warning
* https://docs.docker.com/reference/build-checks/secrets-used-in-arg-or-env/

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 credentials.txt
 docker/credentials.txt
+docker/rh_act_key.txt
+docker/rh_org_id.txt
 tools/out/*
 tools/tmp/*
 tools/files/pkgsign_priv.gpg
